padmin1/base/sso-oauth-authority/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sso-oauth-authority
  name: sso-oauth-authority
