padmin1/base/sso-oauth-authority/service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  creationTimestamp: null
  name: sso-oauth-authority
spec: {}
status:
  loadBalancer: {}
